@@ -51,7 +51,7 @@ static int open_output(void); /* 0=success, 1=warning, -1=fatal error */
 static void close_output(void);
 static int output_data(char *buf, int32 nbytes);
 static int acntl(int request, void *arg);
-
+static int detect(void);
 
 /* export the playback mode */
 
@@ -66,7 +66,8 @@ PlayMode dpm = {
 	open_output,
 	close_output,
 	output_data,
-	acntl
+	acntl,
+	detect
 };
 
 #define	MACBUFSIZE	((AUDIO_BUFFER_SIZE)*4+100)
@@ -383,6 +384,11 @@ static int acntl(int request, void * arg)
       	return 0;
     }
     return -1;
+}
+
+static int detect(void)
+{
+	return 1;	// assume it is available.
 }
 
 /* ************************************************************* */
