@@ -1,3 +1,10 @@
+2004-01-21  Kentaro Sato <kentaro@ranvis.com>
+
+	* timidity/aiff_a.c, common.c, mac_a.c, mac_main.c, mac_qt_a.c,
+	  mac_soundspec.c, mac_util.c, recache.c, wrd_read.c, interface/mac_c.c,
+	  mac_mag.c, mac_wrdwindow.c, wrdt_mac.c, libarc/arc_mime.c:
+	  Updated Mac interface to compile.
+
 2004-01-20  Kentaro Sato <kentaro@ranvis.com>
 
 	* interface/dumb_c.c, timidity/playmidi.c, sndfont.c:
